# rag-agentic-system

./: .gitignore  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  interactive_rag.py  main.py  pyproject.toml  query_to_file.py  requirements.txt
src/agents/: __init__.py  drafting_agent.py  research_agent.py
src/config/: settings.py
src/models/: __init__.py  tree.py
src/tools/: __init__.py  analysis_tools.py  decorators.py  document_tools.py  rag_tools.py  search_tools.py  vector_tools.py
src/workflows/: rag_workflow.py  research_workflow.py
